# geo-desktop-bench

./: .gitignore  README.md
.github/workflows/: ci.yml  deploy.yml
geo-render-bench/: .gitignore  README.md  biome.json  index.html  package.json  pmtiles.html  pnpm-lock.yaml  tsconfig.json  vite.config.ts
geo-render-bench/data/: .gitignore  README.md  duckdb-bench.ts  martin-latency.ts  package.json  pmtiles-bench.ts  pnpm-lock.yaml  tsconfig.json
geo-render-bench/data/martin/: config.yaml
geo-render-bench/src/: data.ts  main.ts  pmtiles-demo.ts
geo-render-bench/src/bench/: camera.ts  harness.ts  results.ts
geo-render-bench/src/engines/: deckgl.ts  maplibre.ts  types.ts  webgl2.ts
infra/: DEPLOY.md  cdk.json  package.json  pnpm-lock.yaml  tsconfig.json
infra/lib/: geobench-ci-stack.ts  geobench-stack.ts
scripts/: deploy.sh  fetch-sample-data.sh
shell-bench/: README.md
shell-bench/bench/: measure-ipc.mjs  measure-size.mjs  measure-startup.mjs
shell-bench/electron/: main.js  package.json  pnpm-lock.yaml  preload.js  shell-bench-electron-0.0.0.tgz
shell-bench/frontend/: .gitignore  biome.json  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
shell-bench/frontend/src/: App.tsx  bridge.ts
shell-bench/tauri/: package.json  pnpm-lock.yaml
shell-bench/tauri/src-tauri/: Cargo.toml  tauri.conf.json
shell-bench/tauri/src-tauri/src/: main.rs
site/: build.mjs  index.html  package.json
web-capstone/: biome.json  index.html  package.json  pnpm-lock.yaml  vite.config.ts
web-capstone/src/: main.ts
